Cleanup warnings in IMMS
Bug: 433659053
Test: atest com.android.server.inputmethod
Flag: EXEMPT cleanup
Change-Id: Ia596b17b21b14d7ddc7eb542caee5330a9113645